cfn_benchmark/cfn_templates/aws-samples__sample-msk-custom-domain-name-iam-auth/msk-express-broker-custom-domain-name-iam.yaml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
    Description: The AMI to use for the bastion EC2 instance used to interact with the private MSK cluster
  MSKKafkaVersion:
    Type: String
    Default: 3.6.0
    Description: The Kafka version for the MSK cluster, must be 3.6.0 for Express brokers
  CustomDomainName:
    Type: String
    Default: example.com
    Description: The custom domain to use for the cluster - cluster domain will be prefixed with bootstrap and b-1, b-2, b-3 (e.g. bootstrap.example.com, b-1.example.com, etc.)

Mappings:
  SubnetConfig:
    VPC:
      CIDR: '10.0.0.0/16'
    PublicOne:
      CIDR: '10.0.0.0/24'
    PublicTwo:
      CIDR: '10.0.1.0/24'
    PrivateSubnetMSKOne:
      CIDR: '10.0.2.0/24'
    PrivateSubnetMSKTwo:
      CIDR: '10.0.3.0/24'
    PrivateSubnetMSKThree:
      CIDR: '10.0.4.0/24'

Resources:
  # Shared VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: !FindInMap ['SubnetConfig', 'VPC', 'CIDR']
      Tags:
        - Key: 'Name'
          Value: 'MSKVPC'
  PublicSubnetOne:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: {Ref: 'AWS::Region'}
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PublicOne', 'CIDR']
      MapPublicIpOnLaunch: false
      Tags:
        - Key: 'Name'
          Value: 'PublicSubnetOne'
  PublicSubnetTwo:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: {Ref: 'AWS::Region'}
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PublicTwo', 'CIDR']
      MapPublicIpOnLaunch: false
      Tags:
        - Key: 'Name'
          Value: 'PublicSubnetTwo'
  PrivateSubnetMSKOne:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: {Ref: 'AWS::Region'}
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PrivateSubnetMSKOne', 'CIDR']
      MapPublicIpOnLaunch: false
      Tags:
        - Key: 'Name'
          Value: 'PrivateSubnetMSKOne'
  PrivateSubnetMSKTwo:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: {Ref: 'AWS::Region'}
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PrivateSubnetMSKTwo', 'CIDR']
      MapPublicIpOnLaunch: false
      Tags:
        - Key: 'Name'
          Value: 'PrivateSubnetMSKTwo'
  PrivateSubnetMSKThree:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 2
          - Fn::GetAZs: {Ref: 'AWS::Region'}
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PrivateSubnetMSKThree', 'CIDR']
      MapPublicIpOnLaunch: false
      Tags:
        - Key: 'Name'
          Value: 'PrivateSubnetMSKThree'
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref 'VPC'
      InternetGatewayId: !Ref 'InternetGateway'
  NATEIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NATEIP.AllocationId
      SubnetId: !Ref 'PublicSubnetOne'
      Tags:
        - Key: 'Name'
          Value: 'KafkaNATGateway'
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref 'PublicRouteTable'
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'InternetGateway'
  PublicSubnetOneRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetOne
      RouteTableId: !Ref PublicRouteTable
  PublicSubnetTwoRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetTwo
      RouteTableId: !Ref PublicRouteTable
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'PrivateRouteTable'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'NATGateway'
  PrivateSubnetMSKOneRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnetMSKOne
  PrivateSubnetMSKTwoRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnetMSKTwo
  PrivateSubnetMSKThreeRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnetMSKThree

  # EC2 Bastion
  EC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Sid: ''
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: 'sts:AssumeRole'
      Path: "/"
      ManagedPolicyArns:
        - !Sub arn:${AWS::Partition}:iam::aws:policy/AmazonSSMManagedInstanceCore
        - !Sub arn:${AWS::Partition}:iam::aws:policy/AWSCloudFormationReadOnlyAccess
        - !Ref MSKProducerPolicy

  MSKProducerPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Sid: MSKKMSAccess
            Effect: Allow
            Action:
              - 'kms:Encrypt'
              - 'kms:Decrypt'
              - 'kms:ReEncrypt*'
              - 'kms:GenerateDataKey*'
              - 'kms:DescribeKey'
            Resource: !GetAtt MKSCustomKey.Arn
          - Sid: ClusterAdmin
            Effect: Allow
            Action:
              - 'kafka-cluster:Connect'
              - 'kafka-cluster:AlterCluster'
              - 'kafka-cluster:DescribeCluster'
              - 'kafka-cluster:DescribeClusterDynamicConfiguration'
              - 'kafka-cluster:AlterClusterDynamicConfiguration'
              - 'kafka:ListClusters'
              - 'kafka:GetBootstrapBrokers'
              - 'kafka:ListNodes'
              - 'kafka:ListScramSecrets'
              - 'kafka:ListKafkaVersions'
              - 'kafka-cluster:DeleteCluster'
              - 'kafka-cluster:CreateTopic'
              - 'kafka-cluster:DeleteTopic'
              - 'kafka-cluster:DescribeTopic'
              - 'kafka-cluster:AlterTopic'
              - 'kafka-cluster:Connect'
              - 'kafka-cluster:ReadData'
              - 'kafka-cluster:WriteData'
              - 'kafka-cluster:AlterGroup'
              - 'kafka-cluster:DescribeGroup'
              - 'kafka-cluster:DeleteGroup'
              - 'kafka-cluster:AlterConfig'
              - 'kafka-cluster:DescribeConfig'
              - 'kafka-cluster:DescribeConfigDynamicConfiguration'
              - 'kafka-cluster:AlterConfigDynamicConfiguration'
            Resource:
              - !Sub "arn:${AWS::Partition}:kafka:${AWS::Region}:${AWS::AccountId}:cluster/MSKCluster-${AWS::StackName}/*"
              - !Sub "arn:${AWS::Partition}:kafka:${AWS::Region}:${AWS::AccountId}:topic/MSKCluster-${AWS::StackName}/*"
              - !Sub "arn:${AWS::Partition}:kafka:${AWS::Region}:${AWS::AccountId}:group/MSKCluster-${AWS::StackName}/*"
          - Sid: GetPCA
            Effect: Allow
            Action:
              - acm-pca:GetCertificateAuthorityCertificate
            Resource:
              - !Ref RootCA
  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: !Sub "EC2MMMSKProfile-${AWS::StackName}"
      Roles:
        - !Ref EC2Role
  KafkaClientInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref 'VPC'
      Name: !Sub ${AWS::StackName}-KafkaClientInstanceSecurityGroup
      GroupDescription: Security group for Kafka client instances
      SecurityGroupIngress: []
      SecurityGroupEgress: []

  KafkaClientInstanceSecurityGroupEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref KafkaClientInstanceSecurityGroup
      IpProtocol: -1
      FromPort: 0
      ToPort: 0
      CidrIp: '0.0.0.0/0'
      Description: Egress for bastion.

  KafkaClientEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      IamInstanceProfile: !Ref EC2InstanceProfile
      EbsOptimized: true
      Monitoring: true
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: {Ref: 'AWS::Region'}
      SubnetId: !Ref 'PrivateSubnetMSKOne'
      SecurityGroupIds: [!GetAtt KafkaClientInstanceSecurityGroup.GroupId]
      ImageId: !Ref LatestAmiId
      Tags:
        - Key: "Name"
          Value: !Sub ${AWS::StackName}-KafkaClientInstance
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 20
            VolumeType: gp2
            DeleteOnTermination: true
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum erase awscli -y
          yum update -y
          wget https://repos.fedorapeople.org/repos/dchen/apache-maven/epel-apache-maven.repo -O /etc/yum.repos.d/epel-apache-maven.repo
          sed -i s/\$releasever/6/g /etc/yum.repos.d/epel-apache-maven.repo
          yum install java-1.8.0-openjdk-devel jq apache-maven util-linux-user -y
          # Pre-create ssm-user for SSM sessions (by default gets created on first login)
          useradd ssm-user --shell /bin/bash
          su -c "echo 'cd /home/ssm-user/' >> /home/ssm-user/.bash_profile" -s /bin/bash ssm-user
          su -l -c "pip3 install awscli --user" -s /bin/bash ssm-user
          su -l -c "wget https://archive.apache.org/dist/kafka/3.6.0/kafka_2.13-3.6.0.tgz" -s /bin/bash ssm-user
          su -l -c "tar -xzf kafka_2.13-3.6.0.tgz --strip 1" -s /bin/bash ssm-user
          su -l -c "wget https://github.com/aws/aws-msk-iam-auth/releases/download/v2.2.0/aws-msk-iam-auth-2.2.0-all.jar " -s /bin/bash ssm-user
          su -l -c "mv aws-msk-iam-auth-2.2.0-all.jar libs" -s /bin/bash ssm-user
          cat > /home/ssm-user/update_advertised_listeners.sh <<"EOF"
          #!/bin/bash
          set -e
          alias aws=~/.local/bin/aws
          HELP='update_advertised_listeners.sh
          Usage: ./update_advertised_listeners.sh --cluster-arn ARN --region REGION
          options:
              -h/--help           Show this help message and exit
              -c/--cluster-arn    The cluster ARN
              -r/--region         The AWS region'
          while [[ $# -gt 0 ]]; do
            case "$1" in
                -h|--h*)
                  echo "$HELP"
                  exit;;
                -c|--c*)
                  cluster_arn="$2"; shift 2;;
                -r|--r*)
                  region="$2"; shift 2;;
                --) shift; break ;;
                *)
                  echo "Error: Invalid option = $1 $2"
                  echo "$HELP"
                  exit 1;;
            esac
          done
          CUSTOM_DOMAIN="${CustomDomainName}"
          if [ -z "$cluster_arn" ] || [ -z "$region" ]; then echo "$HELP"; exit 1; fi
          broker_ids=$(aws kafka list-nodes --region "$region" --cluster-arn $cluster_arn | jq -r ".NodeInfoList[].BrokerNodeInfo.BrokerId")
          bootstrap_server=$(aws kafka get-bootstrap-brokers --region "$region" --cluster-arn $cluster_arn | jq -r ".BootstrapBrokerStringSaslIam")
          if [ -z "$broker_ids" ] || [ -z "$bootstrap_server" ]; then echo "Failed to get broker information for cluster ARN: $cluster_arn"; exit 1; fi
          service_domain=$(echo "$bootstrap_server" | tr ',' '\n' | head -n 1 | cut -d":" -f 1 | sed 's/^boot-[^.]*\.//')
          for b_id in $broker_ids; do
            # Get MSK listeners configuration
            # If advertised is already configured, use that, as MSK configures multi-VPC connectivity with advertised.listeners, otherwise take the listeners config
            msk_listeners=$(bin/kafka-configs.sh --bootstrap-server "$bootstrap_server" --command-config client-iam.properties --entity-type brokers --entity-name "$b_id" --describe --all 2>/dev/null | grep " advertised.listeners=" | cut -d'=' -f2 | cut -d' ' -f1)
            if [ -z "$msk_listeners" ] || [ "$msk_listeners" == "null" ]; then
              msk_listeners=$(bin/kafka-configs.sh --bootstrap-server "$bootstrap_server" --command-config client-iam.properties --entity-type brokers --entity-name "$b_id" --describe --all 2>/dev/null | grep " listeners=" | cut -d'=' -f2 | cut -d' ' -f1)
            fi

            # Replace CLIENT_IAM protocol with custom domain
            updated_listeners=$(echo "$msk_listeners" | sed "s/CLIENT_IAM:[^,]*/CLIENT_IAM:\/\/b-$b_id.$CUSTOM_DOMAIN:900$b_id/g")

            #echo "Debug: msk_listeners=$msk_listeners"
            #echo "Debug: updated_listeners=$updated_listeners"

            if [ -n "$updated_listeners" ]; then
              echo "Setting Advertised Listener configuration for broker b-$b_id"
              config_file="/tmp/kafka_config_$b_id.properties"
              echo "advertised.listeners=$updated_listeners" > "$config_file"
              bin/kafka-configs.sh --bootstrap-server "$bootstrap_server" --command-config client-iam.properties --alter --entity-type brokers --entity-name "$b_id" --add-config-file "$config_file"
              rm -f "$config_file"
            else
              echo "Error: No listeners found for broker b-$b_id"
            fi
          done
          EOF
          chown ssm-user:ssm-user /home/ssm-user/update_advertised_listeners.sh
          chmod +x /home/ssm-user/update_advertised_listeners.sh
          cat > /home/ssm-user/client-iam.properties <<"EOF"
          security.protocol=SASL_SSL
          sasl.mechanism=AWS_MSK_IAM
          sasl.jaas.config=software.amazon.msk.auth.iam.IAMLoginModule required;
          sasl.client.callback.handler.class=software.amazon.msk.auth.iam.IAMClientCallbackHandler
          EOF
          cat > client-iam-custom-domain-name.properties <<"EOF"
          ssl.truststore.location=/home/ssm-user/cacerts
          ssl.truststore.password=changeit
          security.protocol=SASL_SSL
          sasl.mechanism=AWS_MSK_IAM
          sasl.jaas.config=software.amazon.msk.auth.iam.IAMLoginModule required;
          sasl.client.callback.handler.class=software.amazon.msk.auth.iam.IAMClientCallbackHandler
          EOF
          chown ssm-user:ssm-user /home/ssm-user/client-iam.properties
          su -c "echo 'export PS1=\"KafkaClientEC2Instance1 [\u@\h \W]$ \"' >> /home/ssm-user/.bash_profile" -s /bin/bash ssm-user

  # CA setup to allow custom domain name
  RootCA:
    Type: AWS::ACMPCA::CertificateAuthority
    Properties:
      Type: ROOT
      KeyAlgorithm: RSA_2048
      SigningAlgorithm: SHA256WITHRSA
      Subject:
        Country: US
        Organization: Amazon
        OrganizationalUnit: AWS
        State: New York
        CommonName: BootstrapCA
      RevocationConfiguration:
        CrlConfiguration:
          Enabled: false
  RootCACertificate:
    Type: AWS::ACMPCA::Certificate
    Properties:
      CertificateAuthorityArn: !Ref RootCA
      CertificateSigningRequest: !GetAtt RootCA.CertificateSigningRequest
      SigningAlgorithm: SHA256WITHRSA
      TemplateArn: !Sub arn:${AWS::Partition}:acm-pca:::template/RootCACertificate/V1
      Validity:
        Type: YEARS
        Value: 10
  RootCAActivation:
    Type: AWS::ACMPCA::CertificateAuthorityActivation
    Properties:
      CertificateAuthorityArn: !Ref RootCA
      Certificate: !GetAtt RootCACertificate.Certificate
      Status: ACTIVE
  RootCAPermission:
    Type: AWS::ACMPCA::Permission
    Properties:
      Actions:
        - IssueCertificate
        - GetCertificate
        - ListPermissions
      CertificateAuthorityArn: !Ref RootCA
      Principal: acm.amazonaws.com
  BootstrapCert:
    Type: AWS::CertificateManager::Certificate
    DependsOn: RootCAActivation
    Properties:
      CertificateAuthorityArn: !Ref RootCA
      DomainName: !Sub bootstrap.${CustomDomainName}
      KeyAlgorithm: RSA_2048
      SubjectAlternativeNames:
        - !Sub b-1.${CustomDomainName}
        - !Sub b-2.${CustomDomainName}
        - !Sub b-3.${CustomDomainName}

  # NLB for custom hostname
  NLBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      Name: ${AWS::StackName}-NLBSecurityGroup
      GroupDescription: Security group for NLB
      SecurityGroupIngress: []
      SecurityGroupEgress: []

  NLBSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref NLBSecurityGroup
      IpProtocol: tcp
      FromPort: 9000
      ToPort: 9003
      CidrIp: !FindInMap ['SubnetConfig', 'VPC', 'CIDR']
      Description: Allow access to MSKBrokerNodes

  NLBEgressRule:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref NLBSecurityGroup
      IpProtocol: tcp
      FromPort: 9098
      ToPort: 9098
      DestinationSecurityGroupId: !Ref MSKSecurityGroup
      Description: Allow NLB health checks to MSK on IAM ports

  NLB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: False
        - Key: load_balancing.cross_zone.enabled
          Value: True
      Scheme: internal
      SecurityGroups:
        - !Ref NLBSecurityGroup
      Subnets: [!Ref PrivateSubnetMSKOne, !Ref PrivateSubnetMSKTwo, !Ref PrivateSubnetMSKThree]
      Type: network
  TargetGroupAll:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub "${AWS::StackName}-msk-all"
      Port: 9000
      Protocol: TLS
      TargetType: ip
      VpcId: !Ref VPC
      Targets:
        - Id: !Select [0, !GetAtt BrokerInfo.NodeIPs]
          Port: 9098
        - Id: !Select [1, !GetAtt BrokerInfo.NodeIPs]
          Port: 9098
        - Id: !Select [2, !GetAtt BrokerInfo.NodeIPs]
          Port: 9098
  TargetGroupB1:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub "${AWS::StackName}-msk-b1"
      Port: 9001
      Protocol: TLS
      TargetType: ip
      VpcId: !Ref VPC
      Targets:
        - Id: !Select [0, !GetAtt BrokerInfo.NodeIPs]
          Port: 9098
  TargetGroupB2:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub "${AWS::StackName}-msk-b2"
      Port: 9002
      Protocol: TLS
      TargetType: ip
      VpcId: !Ref VPC
      Targets:
        - Id: !Select [1, !GetAtt BrokerInfo.NodeIPs]
          Port: 9098
  TargetGroupB3:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub "${AWS::StackName}-msk-b3"
      Port: 9003
      Protocol: TLS
      TargetType: ip
      VpcId: !Ref VPC
      Targets:
        - Id: !Select [2, !GetAtt BrokerInfo.NodeIPs]
          Port: 9098
  ListenerAll:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroupAll
      LoadBalancerArn: !Ref NLB
      Port: 9000
      Protocol: TLS
      SslPolicy: ELBSecurityPolicy-TLS13-1-2-2021-06
      Certificates:
        - CertificateArn: !Ref BootstrapCert
  ListenerB1:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroupB1
      LoadBalancerArn: !Ref NLB
      Port: 9001
      Protocol: TLS
      SslPolicy: ELBSecurityPolicy-TLS13-1-2-2021-06
      Certificates:
        - CertificateArn: !Ref BootstrapCert
  ListenerB2:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroupB2
      LoadBalancerArn: !Ref NLB
      Port: 9002
      Protocol: TLS
      SslPolicy: ELBSecurityPolicy-TLS13-1-2-2021-06
      Certificates:
        - CertificateArn: !Ref BootstrapCert
  ListenerB3:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroupB3
      LoadBalancerArn: !Ref NLB
      Port: 9003
      Protocol: TLS
      SslPolicy: ELBSecurityPolicy-TLS13-1-2-2021-06
      Certificates:
        - CertificateArn: !Ref BootstrapCert
  HostedZone:
    Type: AWS::Route53::HostedZone
    Properties:
      Name: !Ref CustomDomainName
      VPCs:
        - VPCId: !Ref VPC
          VPCRegion: !Ref AWS::Region
  RecordAll:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneId: !Ref HostedZone
      Name: !Sub bootstrap.${CustomDomainName}
      Type: CNAME
      TTL: 300
      ResourceRecords:
        - !GetAtt NLB.DNSName
  RecordB1:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneId: !Ref HostedZone
      Name: !Sub b-1.${CustomDomainName}
      Type: CNAME
      TTL: 300
      ResourceRecords:
        - !GetAtt NLB.DNSName
  RecordB2:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneId: !Ref HostedZone
      Name: !Sub b-2.${CustomDomainName}
      Type: CNAME
      TTL: 300
      ResourceRecords:
        - !GetAtt NLB.DNSName
  RecordB3:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneId: !Ref HostedZone
      Name: !Sub b-3.${CustomDomainName}
      Type: CNAME
      TTL: 300
      ResourceRecords:
        - !GetAtt NLB.DNSName

  # MSK Cluster for target environment
  MKSCustomKey:
    Type: AWS::KMS::Key
    Properties:
      Description: Amazon MSK custom Key
      Enabled: True
      EnableKeyRotation: true
      KeyPolicy:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              AWS: !Sub 'arn:${AWS::Partition}:iam::${AWS::AccountId}:root'
            Action: 'kms:*'
            Resource: '*'
  MSKSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: [PublicSubnetOne, PublicSubnetTwo, PrivateSubnetMSKOne, PrivateSubnetMSKTwo, PrivateSubnetMSKThree]
    Properties:
      VpcId: !Ref 'VPC'
      Name: ${AWS::StackName}-MSKSecurityGroup
      GroupDescription: Security group for MSK cluster
      SecurityGroupIngress: []
      SecurityGroupEgress: []

  MSKIngress9098:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt MSKSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 9098
      ToPort: 9098
      SourceSecurityGroupId: !GetAtt NLBSecurityGroup.GroupId
      Description: "Allow NLB to communicate with MSK cluster - IAM"

  MSKIngress9092EC2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt MSKSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 9092
      ToPort: 9092
      Cidrip: !FindInMap ['SubnetConfig', 'VPC', 'CIDR']
      Description: "Allow EC2 to communicate with MSK cluster - Unauthenticated"

  MSKIngress9098EC2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt MSKSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 9098
      ToPort: 9098
      Cidrip: !FindInMap ['SubnetConfig', 'VPC', 'CIDR']
      Description: "Allow EC2 to communicate with MSK cluster - IAM"

  MSKIngress9098SelfAccess:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt MSKSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 9098
      ToPort: 9098
      SourceSecurityGroupId: !GetAtt MSKSecurityGroup.GroupId
      Description: "Allow services using MSKSecurityGroup to access MSK cluster via IAM auth"
  MSKCluster:
    Type: AWS::MSK::Cluster
    Properties:
      BrokerNodeGroupInfo:
        ClientSubnets:
          - !Ref 'PrivateSubnetMSKOne'
          - !Ref 'PrivateSubnetMSKTwo'
          - !Ref 'PrivateSubnetMSKThree'
        InstanceType: express.m7g.large
        SecurityGroups: [!GetAtt MSKSecurityGroup.GroupId]
      ClusterName: !Sub "MSKCluster-${AWS::StackName}"
      EncryptionInfo:
        EncryptionInTransit:
          ClientBroker: TLS_PLAINTEXT
          InCluster: true
      ClientAuthentication:
        Sasl:
          Scram:
            Enabled: False
          Iam:
            Enabled: True
        Unauthenticated:
          Enabled: True
      EnhancedMonitoring: DEFAULT
      KafkaVersion: !Ref MSKKafkaVersion
      NumberOfBrokerNodes: 3
  CustomResourceGetMSKBootstrapBrokersExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: "/"
      ManagedPolicyArns:
        - !Ref CustomResourceGetMSKBootstrapBrokersPolicy
        - !Sub arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole

  CustomResourceGetMSKBootstrapBrokersPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Action:
              - kafka:GetBootstrapBrokers
              - kafka:ListNodes
              - kafka-cluster:DescribeCluster*
            Resource:
              - !Sub "arn:${AWS::Partition}:kafka:${AWS::Region}:${AWS::AccountId}:cluster/MSKCluster-${AWS::StackName}/*"
          - Effect: Allow
            Action:
              - logs:CreateLogGroup
              - logs:CreateLogStream
              - logs:PutLogEvents
            Resource:
              - !Sub "arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/lambda/${AWS::StackName}-CustomResourceGetMSKBootstrapBrokers-${AWS::StackId}"

  CustomResourceGetMSKBootstrapBrokers:
    Type: AWS::Lambda::Function
    DependsOn:
      - PublicRoute
      - PrivateRoute
      - MSKCluster
      - NATGateway
      - NATEIP
      - InternetGatewayAttachment
      - InternetGateway
      - PrivateSubnetMSKOneRouteTableAssociation
      - PrivateSubnetMSKTwoRouteTableAssociation
      - PrivateSubnetMSKThreeRouteTableAssociation
      - PublicSubnetOneRouteTableAssociation
      - PublicSubnetTwoRouteTableAssociation
      - KafkaClientInstanceSecurityGroupEgress
    Properties:
      ReservedConcurrentExecutions: 1
      Code:
        ZipFile: |
          import boto3, json, urllib3
          client = boto3.client('kafka')
          http = urllib3.PoolManager()

          def send_response(event, context, response_status, response_data):
              response_body = {
                  "Status": response_status,
                  "PhysicalResourceId": context.log_stream_name,
                  "StackId": event["StackId"],
                  "RequestId": event["RequestId"],
                  "LogicalResourceId": event["LogicalResourceId"],
              }
              if event["RequestType"] in ("Create", "Update"):
                response_body.update({
                  "Reason": "See the details in CloudWatch Log Stream: " + context.log_stream_name,
                  "Data": response_data
                })
              print(json.dumps({"event": "put_to_cf", "response": response_body}, default=str))
              url = event["ResponseURL"]
              response_body = json.dumps(response_body, default=str)
              headers = {
                  "content-type": "application/json",
                  "content-length": len(response_body)
              }

              r = http.request('PUT', url, headers=headers, body=response_body)
              print(json.dumps({"event": "response_from_cf", "status": r.status, "headers": r.getheaders().__dict__}, default=str))

          def handler(event, context):
            print(json.dumps({"event": "start", "event_body": event, "context": context.__dict__}, default=str))
            brokers = client.get_bootstrap_brokers(
              ClusterArn=event['ResourceProperties']['ClusterArn']
            )
            nodes = client.list_nodes(
              ClusterArn=event['ResourceProperties']['ClusterArn']
            )
            nodes_sorted = sorted(nodes["NodeInfoList"], key=lambda node: node["BrokerNodeInfo"]["BrokerId"])
            node_ips = [i["BrokerNodeInfo"]["ClientVpcIpAddress"] for i in nodes_sorted]
            resp = {"BootstrapBrokerStringSaslIam": brokers["BootstrapBrokerStringSaslIam"], "NodeIPs": node_ips}
            print(json.dumps({"event": "resp_from_msk", "result": resp}, default=str))
            send_response(event, context, "SUCCESS", resp)
            return str(resp)
      Handler: "index.handler"
      Runtime: python3.11
      Timeout: 60
      Role: !GetAtt CustomResourceGetMSKBootstrapBrokersExecutionRole.Arn
      VpcConfig:
        SecurityGroupIds:
          - !Ref KafkaClientInstanceSecurityGroup
        SubnetIds:
          - !Ref PrivateSubnetMSKOne
          - !Ref PrivateSubnetMSKTwo
          - !Ref PrivateSubnetMSKThree
  BrokerInfo:
    Type: Custom::CustomResourceGetMSKBootstrapBrokers
    Properties:
      ServiceToken: !GetAtt CustomResourceGetMSKBootstrapBrokers.Arn
      Region: !Ref "AWS::Region"
      ClusterArn: !GetAtt MSKCluster.Arn

Outputs:
  MSKSecurityGroupID:
    Description: The ID of the security group created for the MSK clusters
    Value: !GetAtt MSKSecurityGroup.GroupId
  MSKClusterArn:
    Description: The Arn for the MSK cluster
    Value: !Ref 'MSKCluster'
    Export:
      Name: !Sub "${AWS::StackName}-MSKClusterArn"
  CertificateAuthorityARN:
    Description: The Arn for the PCA
    Value: !Ref 'RootCA'
    Export:
      Name: !Sub "${AWS::StackName}-CertificateAuthorityARN"
  ClusterBrokerString:
    Description: Broker URI string for cluster
    Value: !GetAtt BrokerInfo.BootstrapBrokerStringSaslIam
    Export:
      Name: !Sub "${AWS::StackName}-ClusterBrokerString"
